styles.css
:root{ 
    --dark-green: #00373E; 
    --background: #F7F6F4;
    --badge: #F9E6D0; 

    /* Fonts */
    --bricolage-grotesque: "Bricolage Grotesque", sans-serif;

    --font-title: 70px; 
    --font-subtitle: 52px; 
    --font-logo: 50px;
    --font-medium: 52px;
    --font-base: 24px;
    --font-description: 22px;
    --font-card-title: 40px;
    --font-text: 20px;
    --font-small: 14px;
    --font-card: 20px;
}


/** COMPONENTS **/
.header { 
    font-weight: 500; 
    font-size: var(--font-small);
    text-transform: capitalize;
}

.subtitle { 
    font-weight: 700; 
    font-size: var(--font-subtitle);
    margin: 0px;
    padding: 0px;
}

.description { 
    font-size: var(--font-description);
    margin: 0px;
}

.btn { 
    height: 54px;
    width: auto; 
    color: white; 
    padding: 0 39px;
    background: var(--dark-green);
    font-size: var(--font-card);
    border: none; 
    border-radius: 999px; 
    appearance: none; 
    cursor: pointer;
}
.btn-outline { 
    background: transparent; 
    border: 2px solid var(--dark-green);
     color: var(--dark-green);
}

.card { 
    header { 
        font-weight: 600;
        font-size: var(--font-card-title);
    }
    p { 
        font-size: var(--font-text);
        background: transparent; 
    }  
}

* { 
    margin: 0; 
    padding: 0; 
    box-sizing: border-box;
}

body { 
    background: var(--background);
    font-family: var(--bricolage-grotesque);
    color: var(--dark-green);

    > * { 
        max-width: 1240px;
        padding: 0 50px;
    }
}

#header { 
    display: flex; 
    align-items: center;
    margin: 75px auto; 

    h1 { 
        flex: 1; 
        text-align: center;

        a { 
            font-size: 50px;
        }
    }

    a { 
        text-decoration: none;
        color: var(--dark-green);
    }

    nav { 
        width: 100%;
        display: flex;
        justify-content: space-between;
        
        ul { 
            display: flex; 
            
            gap: 69px;
            align-items: center;
            list-style: none;
            
            a { 
                font-size: 18px;
            }
        }
    }
}



#hero { 
    position: relative;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    justify-content: center; 
    align-items: center;
    gap: 15px;
    width: 100%; 
    height: 688px;
    background-color: var(--badge);
    border-radius: 70px;
    text-align: center;

    h2 { 
        font-weight: bold;
        font-size: var(--font-title);
    }
    p  {
        font-size: var(--font-base);
    }
    .btn { 
        margin-top: 20px;
    }

    .image-left { 
        position: absolute;
        left: 0;
        bottom: 0;
    }
    .image-right { 
        position: absolute;
        right: 0;
        bottom: 0;
    }
}

#about { 
     display: flex;
    flex-wrap: wrap;
    justify-content: center;
    min-height: 564px;
    align-items: center;
    gap: 100px;
    .left { 
        max-width: 476px;
        display: grid;
        justify-items: start;
        align-content: start;
        gap: 37px;
       
    }
 

    .green-card{ 
        max-width: 550px;
        display: flex; 
        justify-content: center;
        position: relative; 
        background: var(--dark-green);
        width: 550px;
        aspect-ratio: 1/1;
        border-radius: 70px;

        img { 
            position: absolute; 
            bottom: 0; 
        }
    }
}


#services { 
    display: flex; 
    flex-direction: column; 
    align-items: center;
    text-align: center;
    gap: 80px;
    width: 100%;

    .top { 
        display: flex; 
        flex-direction: column; 
        align-items: center;
        gap: 20px;
    }
    
    .service-container{
        text-align: start;
        width: 100%; 
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: repeat(2, 455px);
        gap: 40px;

        > * { 
            border-radius: 70px;
            padding: 75px 52px 82px 60px;
            gap: 35px; 
            display: flex; 
            flex-direction: column;
            align-items: start;

            
        }

        > :nth-child(1) { 
            background: var(--badge);
            position: relative; 
            img { 
                position: absolute; 
                right: 52px; 
                bottom: 82px;
                width: 200px;
            }
            p { 
                max-width: 295px;
            }
        }
        > :nth-child(2) { 
            background: white;
        }
        > :nth-child(3) { 
            position: relative;
            grid-column: 1/ 3;
            background: white;
            img { 
                position: absolute; 
                right: 0; 
                bottom: 0;
            }
           
        }
    }
}


main { 
    display: flex;
    flex-direction: column;
    gap: 100px;
    margin: 0 auto; 
}

